Fixed timer z-index and increased "Time's up" message interval to 30 sec.

--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -7,6 +7,7 @@
   bottom: 92px;
 
   display: flex;
+  z-index: $base-z-index + $base-z-index-step * 3;
 }
 
 .timer__box {
